--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#062CFD</color>
     <color name="violet">#5F0BF3</color>
+    <color name="lightGray">#F2F2F2</color>
+    <color name="colorPrimary">#6177FC</color>
 </resources>
