--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -42,14 +42,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-        <Button
-            android:id="@+id/parking"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/circle_shape"
-            android:icon="@drawable/parking"
-            android:color="#DFFBED"
-            android:title="Parking" />
+<!--        <Button-->
+<!--            android:id="@+id/parking"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@drawable/circle_shape"-->
+<!--            android:icon="@drawable/parking"-->
+<!--            android:color="#DFFBED"-->
+<!--            android:title="Parking" />-->
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
