--- a/app/src/main/res/drawable-v24/profile_back_button.xml
+++ b/app/src/main/res/drawable-v24/profile_back_button.xml
@@ -5,9 +5,9 @@
         />
     <gradient
         android:angle="0"
-        android:centerX="35%"
-        android:startColor="#E8526D"
-        android:endColor="#C15CF5"
+        android:centerX="65%"
+        android:startColor="#FF3B30"
+        android:endColor="#FF4081"
         android:type="linear"
         />
     <size
