--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -33,7 +33,8 @@
                 style="@style/profileDetailsTextMain" />
 
             <TextView
-                android:text="developer"
+                android:id="@+id/name"
+                android:text=""
                 android:layout_toRightOf="@id/nameImageView"
                 style="@style/profileDetailsMiniText" />
 
@@ -52,7 +53,8 @@
                 style="@style/profileDetailsTextMain"/>
 
             <TextView
-                android:text="+91-8129999999"
+                android:id="@+id/mobile"
+                android:text=""
                 android:layout_toRightOf="@id/mobileImageView"
                 style="@style/profileDetailsMiniText" />
 
@@ -66,6 +68,7 @@
                 style="@style/profileDetailsImage" />
 
             <TextView
+                android:id="@+id/email"
                 android:text="Email"
                 android:layout_toRightOf="@id/emailImageView"
                 style="@style/profileDetailsTextMain" />
@@ -104,6 +107,7 @@
                 style="@style/profileDetailsImage" />
 
             <TextView
+                android:id="@+id/dob"
                 android:text="D.O.B"
                 android:layout_toRightOf="@id/dobImageView"
                 style="@style/profileDetailsTextMain" />
