--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -23,7 +23,7 @@
         <RelativeLayout style="@style/profileDetailsLayout">
             <ImageView
                 android:id="@+id/nameImageView"
-                android:src="@drawable/ic_name"
+                android:src="@drawable/name"
                 style="@style/profileDetailsImage" />
 
             <TextView
@@ -44,7 +44,7 @@
         <RelativeLayout style="@style/profileDetailsLayout">
             <ImageView
                 android:id="@+id/mobileImageView"
-                android:src="@drawable/ic_mobile"
+                android:src="@drawable/smartphone"
                 style="@style/profileDetailsImage" />
 
             <TextView
@@ -64,17 +64,17 @@
         <RelativeLayout style="@style/profileDetailsLayout">
             <ImageView
                 android:id="@+id/emailImageView"
-                android:src="@drawable/ic_email"
+                android:src="@drawable/email"
                 style="@style/profileDetailsImage" />
 
             <TextView
-                android:id="@+id/email"
                 android:text="Email"
                 android:layout_toRightOf="@id/emailImageView"
                 style="@style/profileDetailsTextMain" />
 
             <TextView
-                android:text="developer@appsnipp.com"
+                android:id="@+id/email"
+                android:text=""
                 android:layout_toRightOf="@id/emailImageView"
                 style="@style/profileDetailsMiniText" />
 
@@ -84,16 +84,17 @@
         <RelativeLayout style="@style/profileDetailsLayout">
             <ImageView
                 android:id="@+id/addressImageView"
-                android:src="@drawable/ic_address"
+                android:src="@drawable/sex"
                 style="@style/profileDetailsImage" />
 
             <TextView
-                android:text="Address"
+                android:text="Gender"
                 android:layout_toRightOf="@id/addressImageView"
                 style="@style/profileDetailsTextMain" />
 
             <TextView
-                android:text="Avenue 2nd Street NW SY."
+                android:id="@+id/gender"
+                android:text=""
                 android:layout_toRightOf="@id/addressImageView"
                 style="@style/profileDetailsMiniText" />
 
@@ -103,17 +104,17 @@
         <RelativeLayout style="@style/profileDetailsLayout">
             <ImageView
                 android:id="@+id/dobImageView"
-                android:src="@drawable/ic_dob"
+                android:src="@drawable/calendar"
                 style="@style/profileDetailsImage" />
 
             <TextView
-                android:id="@+id/dob"
                 android:text="D.O.B"
                 android:layout_toRightOf="@id/dobImageView"
                 style="@style/profileDetailsTextMain" />
 
             <TextView
-                android:text="12-05-1990"
+                android:id="@+id/dob"
+                android:text=""
                 android:layout_toRightOf="@id/dobImageView"
                 style="@style/profileDetailsMiniText" />
 
