--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -122,6 +122,12 @@
 
         <View style="@style/proifleDetailsView" />
 
+        <Button
+            android:id="@+id/signout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign Out"/>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
