--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -49,9 +49,10 @@
                     android:textStyle="bold"/>
 
                 <TextView
+                    android:id="@+id/balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="developer@appsnipp.com"
+                    android:text="0.0"
                     android:textSize="12dp"
                     android:textStyle="bold"/>
 
