--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -10,7 +10,7 @@
         android:title="History"/>
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/ic__arrows_24"
+        android:icon="@drawable/person_24"
         android:title="Profile"/>
 
 </menu>
